package baseline;

public class Solution42 {
    public static void main(String[] args) {
        DataParsing parser = new DataParsing();
        parser.readData("C:\\Users\\Joshua\\Documents\\COP3330\\Sipos-a04\\exercise42\\data\\exercise42_input.txt");
        parser.printData();
        parser.writeData("C:\\Users\\Joshua\\Documents\\COP3330\\Sipos-a04\\exercise42\\data\\exercise42_output.txt");
    }
}
